# mice-piper

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  build.sh  mice-piper  mice-piper.py  mice-piper.service  mouse-piper  mouse-piper.py  mouse-piper.service  piper_actions.py  piper_device.py  postinst
debian/: postinst  prerm
